# boriel-basic-bot

./: .gitignore  README.md  bot.py  common.py  conversation.py  hug_lib.py  pyproject.toml  retrieval.py  train_rag.py
app/: bot.py  common.py  conversation.py  retrieval.py  train_rag.py
app/lib/: hug_lib.py  hugging_face.py
tests/: test_conversation.py
