[tool.poetry]
name = "boriel-basic-bot"
version = "0.1.0"
description = "A Boriel Basic GPT helper"
authors = ["Jose Rodriguez <boriel@gmail.com>"]
license = "AGPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytelegrambotapi = "^4.18.1"
ollama = "^0.2.0"
chromadb = "^0.5.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
